
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int UINT ;
typedef int UCHAR ;
struct TYPE_3__ {int* state; int * buf; } ;
typedef TYPE_1__ MY_SHA0_CTX ;


 int rol (int,int) ;

__attribute__((used)) static void MY_SHA0_Transform(MY_SHA0_CTX* ctx) {
 UINT W[80];
 UINT A, B, C, D, E;
 UCHAR* p = ctx->buf;
 int t;
 for(t = 0; t < 16; ++t) {
  UINT tmp = *p++ << 24;
  tmp |= *p++ << 16;
  tmp |= *p++ << 8;
  tmp |= *p++;
  W[t] = tmp;
 }
 for(; t < 80; t++) {

  W[t] = (1,W[t-3] ^ W[t-8] ^ W[t-14] ^ W[t-16]);
 }
 A = ctx->state[0];
 B = ctx->state[1];
 C = ctx->state[2];
 D = ctx->state[3];
 E = ctx->state[4];
 for(t = 0; t < 80; t++) {
  UINT tmp = rol(5,A) + E + W[t];
  if (t < 20)
   tmp += (D^(B&(C^D))) + 0x5A827999;
  else if ( t < 40)
   tmp += (B^C^D) + 0x6ED9EBA1;
  else if ( t < 60)
   tmp += ((B&C)|(D&(B|C))) + 0x8F1BBCDC;
  else
   tmp += (B^C^D) + 0xCA62C1D6;
  E = D;
  D = C;
  C = rol(30,B);
  B = A;
  A = tmp;
 }
 ctx->state[0] += A;
 ctx->state[1] += B;
 ctx->state[2] += C;
 ctx->state[3] += D;
 ctx->state[4] += E;
}
